<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >
    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/inputHint"
        android:inputType="textMultiLine"
        />
    <!--<view-->
    <!--android:id="@+id/line01"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="#cccccc"-->
    <!--android:layout_below="@+id/inputText"/>-->
    <TextView
        android:id="@+id/statuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputText" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/statuText"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/sendButton" />

    <Button
        android:id="@+id/combinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendButton"
        android:layout_toEndOf="@+id/sendButton"
        android:text="@string/combinButton" />

    <Button
        android:id="@+id/settingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/combinButton"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/combinButton"
        android:text="@string/settingButton"
        android:visibility="invisible" />

</RelativeLayout>

